--- a/Pokedex3/Base.lproj/Main.storyboard
+++ b/Pokedex3/Base.lproj/Main.storyboard
@@ -1,14 +1,15 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Pokedex3" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +17,94 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y2i-oI-gAr">
+                                <color key="backgroundColor" red="1" green="0.34509803921568627" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="eiz-2Y-qWB"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="I3k-Hc-Z4g">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="fNw-BA-kXS"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="wHp-yx-8dn"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="WPB-tD-toG">
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="IyE-bI-QWv">
+                                    <size key="itemSize" width="105" height="105"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PokeCell" id="4r6-m5-5py" customClass="PokeCell" customModule="Pokedex3" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4" translatesAutoresizingMaskIntoConstraints="NO" id="4B7-an-fOO">
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="2KZ-RS-mHF"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cormonder" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FZN-k1-f6n">
+                                                    <color key="backgroundColor" red="1" green="0.34509803919999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="4B7-an-fOO" secondAttribute="trailing" id="AqX-f4-zjI"/>
+                                            <constraint firstItem="4B7-an-fOO" firstAttribute="leading" secondItem="4r6-m5-5py" secondAttribute="leading" id="BGa-9u-sv5"/>
+                                            <constraint firstItem="FZN-k1-f6n" firstAttribute="leading" secondItem="4r6-m5-5py" secondAttribute="leading" id="JvU-nc-IoK"/>
+                                            <constraint firstItem="4B7-an-fOO" firstAttribute="top" secondItem="4r6-m5-5py" secondAttribute="top" id="SW4-Xa-W8E"/>
+                                            <constraint firstAttribute="trailing" secondItem="FZN-k1-f6n" secondAttribute="trailing" id="YVr-UV-F4L"/>
+                                            <constraint firstAttribute="bottom" secondItem="FZN-k1-f6n" secondAttribute="bottom" id="sSA-1U-xbE"/>
+                                            <constraint firstItem="FZN-k1-f6n" firstAttribute="top" secondItem="4B7-an-fOO" secondAttribute="bottom" id="zhB-PU-7Hf"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="nameLbl" destination="FZN-k1-f6n" id="zJT-7g-teb"/>
+                                            <outlet property="thumbImg" destination="4B7-an-fOO" id="7TV-3H-GH7"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wHp-yx-8dn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="1f0-zN-wfR"/>
+                            <constraint firstAttribute="trailing" secondItem="I3k-Hc-Z4g" secondAttribute="trailing" id="6um-kG-iic"/>
+                            <constraint firstItem="y2i-oI-gAr" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="E3q-mp-2OB"/>
+                            <constraint firstItem="WPB-tD-toG" firstAttribute="top" secondItem="I3k-Hc-Z4g" secondAttribute="bottom" constant="20" id="Ogk-iB-eZx"/>
+                            <constraint firstAttribute="trailing" secondItem="y2i-oI-gAr" secondAttribute="trailing" id="TGu-sb-6l1"/>
+                            <constraint firstItem="WPB-tD-toG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="Vn0-lg-CbU"/>
+                            <constraint firstItem="y2i-oI-gAr" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="VoW-Vg-Mr1"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="WPB-tD-toG" secondAttribute="bottom" constant="20" id="WgM-aa-Pqi"/>
+                            <constraint firstAttribute="trailing" secondItem="wHp-yx-8dn" secondAttribute="trailing" id="amT-pz-L5p"/>
+                            <constraint firstItem="I3k-Hc-Z4g" firstAttribute="top" secondItem="y2i-oI-gAr" secondAttribute="bottom" id="prZ-8s-Sh2"/>
+                            <constraint firstItem="wHp-yx-8dn" firstAttribute="top" secondItem="I3k-Hc-Z4g" secondAttribute="bottom" id="qqY-7M-5NI"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="wHp-yx-8dn" secondAttribute="bottom" id="se6-tj-Fpr"/>
+                            <constraint firstAttribute="trailing" secondItem="WPB-tD-toG" secondAttribute="trailing" constant="20" id="tpy-eV-IPg"/>
+                            <constraint firstItem="I3k-Hc-Z4g" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="xur-iX-KFK"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-12" y="38.23088455772114"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="4" width="120" height="120"/>
+        <image name="bg" width="1920" height="1200"/>
+    </resources>
 </document>
